--- a/src/components/document/document.scss
+++ b/src/components/document/document.scss
@@ -13,7 +13,7 @@
   font-size: 12px;
   box-shadow: 2px 2px 10px 2px $gray;
   background-color: $white;
-  margin-top: 3vw;
+  margin-top: 10px;
   z-index: 10;
 }
 
