--- a/src/components/document/listOfGoods/listOfGoods.scss
+++ b/src/components/document/listOfGoods/listOfGoods.scss
@@ -1,11 +1,21 @@
 @import '../styles/color.scss';
 
-.tableHeader {
+.table {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   width: 100%;
   border-collapse: collapse;
   font-size: 12px;
+  table-layout: fixed;
+  white-space: nowrap;
+}
+
+.col1 {
+  width: 30px;
+}
+
+.col2 {
+  width: 150px;
 }
 
 .tableCell {
@@ -13,10 +23,10 @@
   border-left: $white;
   margin: 0;
   padding: 2px 0;
-}
 
-.right {
-  border-right: $white;
+    &.right {
+      border-right: $white;
+    }
 }
 
 .tableCellTotal {
