--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -3,14 +3,15 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  width: 650px;
+  max-width: 450px;
+  margin: 0 auto;
 }
 
 .cap {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 19px 78px;
+  padding: 45px 19px 19px;
   font-family: Arial, Helvetica, sans-serif;
 
     &.capBorder {
@@ -56,9 +57,9 @@
   border: 0;
   border-bottom: 1px solid $gray;
   padding: 6px 10px 2px 10px;
-  margin-top: 13px;
   outline: none;
   font-size: 19px;
+  cursor: pointer;
 
     &.true {
       border-bottom: 1px solid rgba(112, 172, 120, 0.863);
@@ -73,6 +74,7 @@ input::placeholder {
 
 .error {
   color: brown;
+  height: 20px;
   font-weight: 600;
   font-size: small;
   letter-spacing: 1px;
