--- a/src/components/Document/Footer/footer.module.scss
+++ b/src/components/Document/Footer/footer.module.scss
@@ -1,4 +1,5 @@
-@import '../styles/color.scss';
+@import '../../styles/color.scss';
+@import '../../styles/media.scss';
 
 .footer {
   display: flex;
@@ -6,6 +7,11 @@
   font-size: 15px;
   font-weight: 600;
   padding: 25px 10px 15px 15px;
+
+    @include _530 {
+      font-size: 3vw; 
+      padding: 5vw 2vw 3vw 3vw;
+    }
 }
 
 .signature {
@@ -17,4 +23,9 @@
   font-weight: 100;
   border-top: 1px solid $black;
   margin: 15px 0 0 2px;
+
+    @include _530 {
+      font-size: 2vw;  
+      margin: 3.5vw 0 0 .5vw;
+    }
 }
