--- a/src/components/Document/Header/header.module.scss
+++ b/src/components/Document/Header/header.module.scss
@@ -1,4 +1,5 @@
-@import '../styles/color.scss';
+@import '../../styles/color.scss';
+@import '../../styles/media.scss';
 
 .date {
  display: flex;
@@ -12,6 +13,10 @@
   width: 15px;
   text-align: center;
   border-bottom: 1px solid $black;
+
+    @include _530 {
+      width: 3vw;
+    }
 }
 
 .dateMonth {
@@ -19,6 +24,10 @@
   width: 75px;
   text-align: center;
   border-bottom: 1px solid $black;
+  
+    @include _530 {
+      width: 16vw;
+    }
 }
 
 .dateYear {
@@ -27,12 +36,21 @@
   margin-left: 5px;
   text-align: center;
   border-bottom: 1px solid $black;
+
+    @include _530 {
+      width: 5vw;
+      margin-left: 1px;
+    }
 }
 
 .title {
   display: flex;
   margin: 0 auto;
   width: 260px;
+
+    @include _530 {
+      width: 45vw;
+    }
 }
 
 .invoiceNumber {
@@ -41,6 +59,12 @@
   height: 28px;
   padding-left: 10px;
   border-bottom: 1px solid $black;
+
+    @include _530 {
+      width: 15vw;
+      height: 4.5vw;
+      padding-left: 1vw;
+    }
 }
 
 .toWhom {
@@ -50,11 +74,16 @@
 
 .toWhomField {
   display: block;
-  width: 450px;
+  width: 100%;
   height: 16px;
   margin-left: 5px;
   padding-left: 10px;
   border-bottom: 1px solid $black;
+
+    @include _530 {
+      height: 2vw;
+      padding-left: 1vw;
+    }
 }
 
 .fromWhom {
@@ -64,9 +93,16 @@
 
 .fromWhomField {
   display: block;
-  width: 395px;
+  width: 88%;
+
   height: 16px;
   margin-left: 5px;
   padding-left: 10px;
   border-bottom: 1px solid $black;
+
+    @include _530 {
+      width: 89.3%;
+      height: 2vw;
+      padding-left: 1vw;
+    }
 }
