--- a/src/components/Document/ListOfGoods/listOfGoods.module.scss
+++ b/src/components/Document/ListOfGoods/listOfGoods.module.scss
@@ -1,4 +1,5 @@
-@import '../styles/color.scss';
+@import '../../styles/color.scss';
+@import '../../styles/media.scss';
 
 .table {
   font-family: Arial, Helvetica, sans-serif;
@@ -8,14 +9,22 @@
   font-size: 12px;
   table-layout: fixed;
   white-space: nowrap;
+
+    @include _530 {
+      font-size: 2vw;
+    }
 }
 
 .col1 {
-  width: 30px;
+  width: 10%;
 }
 
 .col2 {
-  width: 150px;
+  width: 50%;
+}
+
+.col3 {
+  width: 20%;
 }
 
 .tableCell {
@@ -24,8 +33,12 @@
   margin: 0;
   padding: 2px 0;
 
-    &.right {
+    &.rightBorder {
       border-right: $white;
+    }
+
+    @include _530 {
+      padding: .7vw 0;
     }
 }
 
