--- a/src/components/fillingForm.module.scss
+++ b/src/components/fillingForm.module.scss
@@ -1,7 +1,13 @@
+@import './styles/media.scss';
+
 .fillingForm {
   display: flex;
   align-items: center;
   justify-content: center;
   max-width: 1024px;
   margin: 0 auto;
+
+  @include _810 {
+    flex-direction: column;
+  }
 }
